# SSPP-CSR-ELLPACK

./: .gitignore  CMakeLists.txt  Makefile  MatrixBase.cpp  MatrixBase.h  MatrixCSR.cpp  MatrixCSR.cu  MatrixCSR.h  MatrixELLPACK.cpp  MatrixELLPACK.h  aa  all.sh  cuda.sub  main.cpp  smallscale.h  submit.sub  submit_all.sub  upload.sh
OMP/: MatrixCSR.cpp  MatrixCSR.h  MatrixELLPACK.cpp  MatrixELLPACK.h
src/: CMakeLists.txt  CMakeLists_cuda.txt  Makefile  Matrix.h  MatrixBase.cpp  MatrixBase.h  SparseMatrix.h  all.sh  all_OMP.sh  all_cuda.sh  compile.sh  cuda.sh  cuda_all.sub  env.sh  gpu.sub  main.cpp  mmio.cpp  mmio.h  single.sub  submit_all.sub  submit_all_OMP.sub  upload.sh
src/CUDA/: CMakeLists.txt  Makefile
src/CUDA/CSR/: CMakeLists.txt  MatrixCSR_1DB.cu  MatrixCSR_1DB_16H.cu  MatrixCSR_1DB_2H.cu  MatrixCSR_1DB_4H.cu  MatrixCSR_1DB_8H.cu  MatrixCSR_1thread.cu  MatrixCSR_2DB.cu  MatrixCSR_2DB_16H.cu  MatrixCSR_2DB_2H.cu  MatrixCSR_2DB_4H.cu  MatrixCSR_2DB_8H.cu
src/CUDA/ELLPACK/: CMakeLists.txt  ELLPACK_1DB.cu  ELLPACK_1DB_16H.cu  ELLPACK_1DB_2H.cu  ELLPACK_1DB_4H.cu  ELLPACK_1DB_8H.cu  ELLPACK_1thread.cu  ELLPACK_2DB.cu  ELLPACK_2DB_16H.cu  ELLPACK_2DB_2H.cu  ELLPACK_2DB_4H.cu  ELLPACK_2DB_8H.cu
src/OMP/: CMakeLists.txt  MatrixCSR.cpp  MatrixCSR.h  MatrixELLPACK.cpp  MatrixELLPACK.h
src/OMP/CSR/: CMakeLists.txt  CSR.cpp  CSR_16Unroll.cpp  CSR_2Unroll.cpp  CSR_4Unroll.cpp  CSR_8Unroll.cpp  Makefile
src/OMP/ELLPACK/: CMakeLists.txt  ELLPACK.cpp  ELLPACK_16Unroll.cpp  ELLPACK_2Unroll.cpp  ELLPACK_4Unroll.cpp  ELLPACK_8Unroll.cpp  Makefile
src/OMP_Tests/: MatrixCSR_Test.cpp  MatrixCSR_Test.h  MatrixELLPACK_Test.cpp  MatrixELLPACK_Test.h
