add_executable(ELLPACK ELLPACK.cpp ../../MatrixBase.cpp ../MatrixCSR.cpp ../MatrixELLPACK.cpp ../../wtime.cpp ../../mmio.cpp ../../OMP_Tests/MatrixCSR_Test.cpp)
add_executable(ELL_2U ELLPACK_2Unroll.cpp ../../MatrixBase.cpp ../MatrixCSR.cpp ../MatrixELLPACK.cpp ../../wtime.cpp ../../mmio.cpp ../../OMP_Tests/MatrixCSR_Test.cpp)
add_executable(ELL_4U ELLPACK_4Unroll.cpp ../../MatrixBase.cpp ../MatrixCSR.cpp ../MatrixELLPACK.cpp ../../wtime.cpp ../../mmio.cpp ../../OMP_Tests/MatrixCSR_Test.cpp)
add_executable(ELL_8U ELLPACK_8Unroll.cpp ../../MatrixBase.cpp ../MatrixCSR.cpp ../MatrixELLPACK.cpp ../../wtime.cpp ../../mmio.cpp ../../OMP_Tests/MatrixCSR_Test.cpp)
add_executable(ELL_16U ELLPACK_16Unroll.cpp ../../MatrixBase.cpp ../MatrixCSR.cpp ../MatrixELLPACK.cpp ../../wtime.cpp ../../mmio.cpp ../../OMP_Tests/MatrixCSR_Test.cpp)